--- a/scr/sass/style.scss
+++ b/scr/sass/style.scss
@@ -1,3 +1,11 @@
+$special_blue: #1FBAD6;
+
+@mixin btn_hover{
+	&:hover{
+		background-image: none;
+		background-color: $special_blue;
+	}
+}
 .container {
 	width: 1140px;
 	.menu {
@@ -75,7 +83,7 @@ header {
 		text-decoration: none;
 		text-align: right;
 	}
-	.subheader_btn {
+	&_btn {
 		font-family: Roboto;
 		font-style: normal;
 		font-weight: normal;
@@ -89,6 +97,7 @@ header {
 		border-radius: 4px;
 		border: none;
 		margin-top: 19px;
+		@include btn_hover();
 	}
 }
 .promo {
@@ -121,7 +130,7 @@ header {
 		text-align: center;
 		color: #FFFFFF;
 	}
-	.promo_btn {
+	&_btn {
 		display: block;
 		margin: 0 auto;
 		width: 259px;
@@ -137,7 +146,9 @@ header {
 		color: #FFFFFF;
 		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21);
 		margin-top: 116px;
+		@include btn_hover;
 	}
+
 }
 .benefits {
 	min-height: 853px;
@@ -273,6 +284,28 @@ header {
             border-radius: 100%;
             bottom:35px;
             left: 147px;
+            cursor: pointer;
+			&:before{
+				content: '';
+				display: block;
+				width: 14px;
+				height: 2px;
+				background-color: $special_blue;
+			}
+			&:after{
+				content: '';
+				display: block;
+				position: absolute;
+				width: 2px;
+				height: 14px;
+				background-color: $special_blue;
+				transition: 0.3s all;
+			}
+			&:hover{
+				&::before, &::after{
+					background-color: red;
+				}
+			}
         }
     }
 }
@@ -290,4 +323,312 @@ header {
 	background-color: black;
 	color: white;
 	text-transform: uppercase;
+}
+
+
+/*section car*/
+
+.car{
+	padding: 55px 0 137px 0;
+	min-height: 900px;
+	position: relative;
+	&_wrapper1{
+		width: 100%;
+		position: absolute;
+		min-height: 500px;
+		background-color: #000000;
+		bottom:400px;
+	}
+	.container{
+		position: relative;
+	}
+	&_wrapper2{
+		width: 100%;
+		position: absolute;
+		min-height: 400px;
+		background:url(../img/car-img/bg.png);
+		z-index: 0;
+		top: 500px;
+	}
+	&_title{
+		display: block;
+		margin: 0 auto;
+		padding: 5px 0 0 0;
+		text-align: center;
+		width: 112px;
+		height: 24px;
+		font-family: Roboto-Light;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 11px;
+		background-color: white;
+		color: black;
+		text-transform: uppercase;
+	}
+	&_header{
+		margin-top: 32px;
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 38px;
+		text-align: center;
+		text-transform: uppercase;
+		color: white;
+	}
+	&_subheader{
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 17px;
+		line-height: 21px;
+		text-align: center;
+		color: white;
+	}
+	&_img{
+		display: block;
+		margin: 0 auto;
+		margin-top: 54px;
+
+	}
+	&_text{
+		font-family: Roboto-Light;
+		font-style: normal;
+		font-weight: 300;
+		font-size: 17px;
+		text-align: center;
+		color: #222222;
+	}
+}
+
+/*--------------*/
+
+.require{
+	min-height: 922px;
+	padding: 71px 0 87px 0;
+	&_micro_header{
+		display: block;
+		margin: 0 auto;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 112px;
+		height: 24px;
+		font-family: Roboto-Light;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 11px;
+		background-color: #000000;
+		color: white;
+		text-transform: uppercase;
+	}
+	&_header{
+		margin-top: 32px;
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 38px;
+		color: #222222;
+		text-align: center;
+		text-transform: uppercase;
+	}
+	&_block{
+		margin: 33px;
+		&_nmb{
+			margin-bottom: 0px;
+		}
+	}
+	&_title{
+		font-family: Roboto-Light;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 22px;
+		color: $special_blue;
+	}
+	&_list{
+		list-style-type: none;
+		padding-left: 50px;
+		margin-top: 10px;
+		li {
+			position: relative;
+			font-family: Roboto-Light;
+			font-style: normal;
+			font-weight: 300;
+			font-size: 17px;
+			line-height: 24px;
+			margin-bottom: 10px;
+			&::before{
+				content: '';
+				display: block;
+				position: absolute;
+				left: -32px;
+				top:3px;
+				width: 21px;
+				height: 20px;
+				background: url(../img/require-img/check_blue1.png) center (center/cover) no-repeat;
+			}
+		}
+	}
+	&_descr{
+		font-family: Roboto-Light;
+		font-style: normal;
+		font-weight: 300;
+		font-size: 17px;
+		line-height: 24px;
+		color: $special_blue;
+	}
+	.warning{
+		.require_title{
+			color:red;
+		}
+		.require_list{
+			li{
+				&::before{
+					background: url(../img/require-img/check_red1.png) center (center/cover) no-repeat;
+				}
+			}
+		} 
+	}
+}
+
+/*-----------------------*/
+
+.world{
+	position: relative;
+	background: url(../img/world/world_bg.png);
+	min-height: 720px;
+	padding: 46px 0 50px 0;
+	&_title{
+		display: block;
+		margin: 0 auto;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 79px;
+		height: 27px;
+		background: #FFFFFF;
+		text-transform: uppercase;
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 11px;
+		line-height: 11px;
+		color: #070716;
+	}
+	&_header{
+		margin-top: 26px;
+		text-align: center;
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 38px;
+		color:white;
+		text-transform: uppercase;
+	}&_subheader{
+		font-family: Roboto-Light;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 17px;
+		color: #FFFFFF;
+		text-align: center;
+	}
+	a{
+		position: absolute;
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 15px;
+		color: #1FBAD6;
+		text-decoration: none;
+		text-transform: uppercase;
+		bottom:50px;
+		left:50%;
+		transform: translateX(-50%);
+	}
+}
+
+/*-----------*/
+
+.footer{
+	position: relative;
+	min-height: 120px;
+	padding: 11px 0 0 0;
+	&_rentangle{
+		margin: 0 auto;
+		width: 301px;
+		height: 7px;
+		background: #1FBAD6;
+	}
+	&_wrapper_1{
+		display: block;
+		width: 365px;
+		margin: 0 auto;
+		&_menu_1{
+			margin-top: 32px;
+			display: flex;
+			justify-content: space-between;
+			a{
+				font-family: Roboto-Light;
+				font-style: normal;
+				font-weight: 300;
+				font-size: 15px;
+				color: #070716;
+				text-decoration: none;
+				text-transform: uppercase;
+			}
+		}
+	}
+	&_wrapper_2{
+		display: block;
+		margin: 0 auto;
+		width: 390px;
+		margin-top: 8px;
+		&_menu_2{
+			display: flex;
+			justify-content: space-between;
+			a{
+				font-family: Roboto-Light;
+				font-style: normal;
+				font-weight: 300;
+				font-size: 11px;
+				color: #999999;
+				text-decoration: none;
+				text-transform: uppercase;
+			}
+		}
+	}
+	&_language{
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 11px;
+		text-align: center;
+		text-transform: uppercase;
+		color: #1FBAD6;
+		margin-top: 18px;
+	}
+	&_messengers{
+		position: absolute;
+		display: flex;
+		margin-left: 34px;
+		bottom: 37px;
+	}
+	&_circle{
+		position: relative;
+		margin-right: 10px;
+		width: 35px;
+		height: 35px;
+		border-radius: 100%;
+		background-color: black;
+		a{
+			position: absolute;
+			left:50%;
+			transform: translateX(-50%);
+			top:10%;
+		}
+	}
+	&_links{
+		right: 34px;
+		position: absolute;
+		bottom: 42px;
+	}
 }
