--- a/scr/css/fonts.css
+++ b/scr/css/fonts.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'Roboto-Black';
     src: url('../fonts/Roboto-Black/Roboto-Black.eot');
     src: url('../fonts/Roboto-Black/Roboto-Black.eot?#iefix') format('embedded-opentype'),
@@ -24,7 +24,7 @@
     url('../fonts/Roboto-Medium/Roboto-Medium.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-}
+} */
 @font-face {
     font-family: 'Roboto-Light';
     src: url('../fonts/Roboto-light/Roboto-Light.eot');
@@ -34,3 +34,12 @@
     font-weight: 300;
     font-style: normal;
     }
+    @font-face {
+        font-family: 'Roboto';
+        src: url('../fonts/Roboto-light/Roboto-Light.eot');
+        src: url('../fonts/Roboto-light/Roboto-Light.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Roboto-light/Roboto-Light.woff') format('woff'),
+        url('../fonts/Roboto-light/Roboto-Light.ttf') format('truetype');
+        font-weight: 300;
+        font-style: normal;
+        }
