--- a/scr/sass/_media.scss
+++ b/scr/sass/_media.scss
@@ -3,7 +3,9 @@
         display: flex;
         justify-content: space-between;
         &_item{
-            padding-right: 11px;
+            a{
+                padding-right: 11px;
+            }
         }
         &_link{
             font-size: 12px;
@@ -11,6 +13,9 @@
     }
     .subheader{
         margin-top: 52px;
+        &_call{
+            text-align: right;
+        }
         &_text{
             font-size: 12px;
         }
@@ -142,6 +147,7 @@
             padding: 0;
             font-size: 20px;
         }
+        
     }
     .hamburger{
         display: block;
@@ -174,25 +180,22 @@
             }
         }
     }
-    .xs_hidden{
+    .xs_visible{
         display: none;
     }
-    .xs_visible{
+    .xs_hidden{
         display: block;
     }
     .subheader{
         &_phone{
             font-size: 15px;
-            margin: 0;
-            padding: 0;
             text-align: center;
+            margin-top: 10px;
         }
 
         &_btn{
-            display: block;
-            margin: 0;
-            width: 240px;
-            margin: 0 auto;
+            width: 100%;
+            margin-top: 0px;
         }
     } 
     .car{
@@ -226,7 +229,7 @@
             display: none;
         }
         &_btn{
-            width: 110px;
+            width: 100%;
             height: 22px;
             font-size: 10px;
             margin-top: 5px;
