--- a/scr/sass/_media.scss
+++ b/scr/sass/_media.scss
@@ -219,6 +219,14 @@
 @media (max-width: 575px){
     .menu{
         width: 85%;
+        &_item{
+            width: 100%;
+            text-align: center;
+            padding: 4px 0;
+        }
+        &_link{
+            display: block;
+        }
     }
     .subheader{
         height: 60px;
